# RustMine

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  pr_body.md  server.toml
.github/workflows/: ci.yml
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs  varint.rs
crates/net-cli-tools/: Cargo.toml
crates/net-cli-tools/src/: lib.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: batch.rs  chunk.rs  codec.rs  decode.rs  id.rs  interaction.rs  lib.rs  login.rs
crates/raknet/: Cargo.toml
crates/raknet/src/: connection.rs  lib.rs  packet.rs  server.rs
crates/raknet/tests/: packet_tests.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  session.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
docs/: architecture.md  protocol-notes.md
