[workspace]
resolver = "2"
members = [
    "crates/raknet",
    "crates/protocol",
    "crates/nbt",
    "crates/world",
    "crates/ecs",
    "crates/game",
    "crates/commands",
    "crates/plugin-api",
    "crates/server",
    "crates/net-cli-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ManiTheFerfri/RustMine"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
hecs = "0.10"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
