[package]
name = "rustmine-raknet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "time"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread"] }
