[package]
name = "rustmine-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustmine"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
