[package]
name = "rustmine-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustmine"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustmine-raknet = { path = "../raknet" }
rustmine-protocol = { path = "../protocol" }
rustmine-nbt = { path = "../nbt" }
rustmine-world = { path = "../world" }
rustmine-game = { path = "../game" }
rustmine-commands = { path = "../commands" }
